# 2048-optimizer

./: .pre-commit-config.yaml  README.md  pyproject.toml
sofos/: device.py  replay_memory.py
sofos/_2048/: __init__.py  checkpoint.py  environment.py  neural_network.py  training.py
sofos/_2048/evaluate/: __init__.py  metrics.py
sofos/_2048/evaluation/: __init__.py  metrics.py
sofos/_2048/game/: README.md  classes.py  cli.py  gui.py
sofos/_2048/training_saves/: policy_network_v2_5000_1131.3714514194323.pt
sofos/_2048/training_saves/with_stop_when_illegal_move/: policy_network_v2_5000_57.65340795522686.pt
sofos/_2048/training_saves/without_stop_when_illegal_move/: policy_network_v2_1000_1098.8011988011988.pt
sofos/cartpole/: __init__.py  training.py
