[tool.poetry]
name = "sofos"
version = "0.1.0"
description = "Use of Machine Learning to maximize a score on the famous 2048 game"
authors = ["PierreSavatte <pierre-savatte@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"


[tool.poetry.group.dev.dependencies]
isort = "5.13.2"
black = "24.10.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
