[tool.poetry]
name = "sofos"
version = "0.1.0"
description = "Use of Machine Learning to maximize a score on the famous 2048 game"
authors = ["PierreSavatte <pierre-savatte@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = [
    { version = "^2.5.0", source = "windows-cuda-pytorch", markers  = "sys_platform == 'win32'" },
    { version = "^2.5.0", source = "pypi", markers  = "sys_platform != 'win32'" },
    ]
gymnasium = "^1.0.0"
matplotlib = "^3.9.2"
pyqt6 = { version = "^6.7.1", markers  = "sys_platform == 'win32'" }
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
isort = "5.13.2"
black = "24.10.0"


[[tool.poetry.source]]
name = "windows-cuda-pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
